--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ textarea {
   display: flex;
   align-items: center;
 }
-.left-nav {
+.site-nav {
   margin-left: 93px;
 }
 .logo {
@@ -68,44 +68,45 @@ textarea {
   line-height: 1.19;
   color: var(--text-color-logo);
 }
-.logo-dark {
+.logo__header {
   color: #000000;
 }
-.logo-white {
+.logo__footer {
   color: var(--text-color-white);
 }
-.logo-footer {
+.logo--margin {
   display: block;
   margin-bottom: 20px;
 }
-.site-nav {
+.site-nav__list {
   display: flex;
 }
-.site-nav-item {
+.site-nav__item {
   position: relative;
   display: block;
 
   padding-top: 32px;
   padding-bottom: 32px;
 }
-.site-nav-item:not(:last-child) {
+.site-nav__item:not(:last-child) {
   margin-right: 50px;
 }
-.site-nav-link:hover,
-.site-nav-link:focus {
+.site-nav__link:hover,
+.site-nav__link:focus {
   color: var(--text-color-logo);
 }
-.site-nav .current {
-  color: var(--text-color-logo);
-}
-.site-nav-link {
+
+.site-nav__link {
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--text-color-sec);
   transition: color var(--transition-duration) var(--timing-function);
 }
-.current::after {
+.site-nav__link--current {
+  color: var(--text-color-logo);
+}
+.site-nav__link--current::after {
   position: absolute;
   bottom: 0;
   content: '';
@@ -120,10 +121,10 @@ textarea {
   display: flex;
   margin-left: auto;
 }
-.contacts-nav-item:not(:last-child) {
+.contacts-nav__item:not(:last-child) {
   margin-right: 50px;
 }
-.contacts-nav-link {
+.contacts-nav__link {
   display: flex;
   align-items: center;
   font-weight: 500;
@@ -132,11 +133,11 @@ textarea {
   color: var(--text-color-main);
   transition: color var(--transition-duration) var(--timing-function);
 }
-.contacts-nav-link:focus,
-.contacts-nav-link:hover {
+.contacts-nav__link:focus,
+.contacts-nav__link:hover {
   color: var(--text-color-logo);
 }
-.contacts-nav-icon {
+.contacts-nav__icon {
   fill: currentColor;
   margin-right: 10px;
 }
@@ -155,7 +156,7 @@ textarea {
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/herobgc.jpg);
 }
-.hero-title {
+.hero__title {
   margin-bottom: 30px;
   margin-left: auto;
   margin-right: auto;
@@ -167,7 +168,7 @@ textarea {
   text-transform: uppercase;
   color: var(--text-color-white);
 }
-.hero-button {
+.hero__button {
   cursor: pointer;
   font-family: Roboto;
   font-weight: 700;
@@ -183,7 +184,7 @@ textarea {
   border-color: transparent;
 }
 /* Наши преимущества */
-.section-title {
+.section__title {
   margin-bottom: 50px;
   text-align: center;
   font-weight: 700;
@@ -201,13 +202,13 @@ textarea {
 .features {
   display: flex;
 }
-.features-item {
+.features__item {
   width: 270px;
 }
-.features-item:not(:last-child) {
+.features__item:not(:last-child) {
   margin-right: 30px;
 }
-.features-icons {
+.features__icons {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -216,7 +217,7 @@ textarea {
   background-color: var(--secbgc);
   border-radius: 4px;
 }
-.features-title {
+.features__title {
   margin-bottom: 10px;
   font-weight: 700;
   line-height: 1.14;
@@ -224,21 +225,21 @@ textarea {
   color: var(--text-color-sec);
 }
 /* Чем мы занимаемся */
-.work-section {
+.section--padding {
   padding-top: 0;
 }
 
-.work-img {
+.work-list {
   display: flex;
 }
 
-.work-item:not(:last-child) {
+.work-list__item:not(:last-child) {
   margin-right: 30px;
 }
-.work-item {
+.work-list__item {
   position: relative;
 }
-.work-item-tumb {
+.work-list__tumb {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -248,7 +249,7 @@ textarea {
   height: 70px;
   background-color: rgba(47, 48, 58, 0.8);
 }
-.work-item-header {
+.work-list__header {
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
@@ -257,35 +258,35 @@ textarea {
   color: var(--text-color-white);
 }
 /* Наша команда */
-.section-team {
+.section--bgc {
   background-color: var(--secbgc);
 }
-.team-desc {
+.team-cards {
   display: flex;
   text-align: center;
 }
-.team-item {
+.team-cards__item {
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.team-item:not(:last-child) {
+.team-cards__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.team-tumb {
+.team-cards__tumb {
   padding: 30px 0;
 }
 /* icons */
-.team-icons {
+.team-social {
   display: flex;
   justify-content: center;
 }
-.team-icons-list:not(:last-child) {
+.team-social__item:not(:last-child) {
   margin-right: 10px;
 }
-.team-icons-link {
+.team-social__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -297,38 +298,40 @@ textarea {
   transition: color var(--transition-duration) var(--timing-function),
     background-color var(--transition-duration) var(--timing-function);
 }
-.team-icons-link:hover,
-.team-icons-link:focus {
+.team-social__link:hover,
+.team-social__link:focus {
   color: var(--text-color-white);
   background-color: var(--text-color-logo);
 }
-.team-icons-tumb {
+.team-social__icon {
   fill: currentColor;
 }
 
-.team-header {
+.team-cards__name {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   color: var(--text-color-sec);
 }
-.team-text {
+.team-cards__pos {
+  font-size: 16px;
+line-height: 1.18;
   margin-bottom: 16px;
 }
+
 /* Постоянные клиенты */
-.clients-items {
+.clients {
   display: flex;
-  /* justify-content: center; */
 }
-.clients-item {
+.clients__item {
   width: 170px;
   height: 92px;
 }
-.clients-item:not(:last-child) {
+.clients__item:not(:last-child) {
   margin-right: 30px;
 }
-.clients-link {
+.clients__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -340,13 +343,13 @@ textarea {
   transition: color var(--transition-duration) var(--timing-function),
     border-color var(--transition-duration) var(--timing-function);
 }
-.clients-link:hover,
-.clients-link:focus {
+.clients__link:hover,
+.clients__link:focus {
   color: var(--text-color-logo);
   border-color: var(--text-color-logo);
 }
 
-.clients-icon {
+.clients__icon {
   fill: currentColor;
 }
 /* footer */
@@ -354,29 +357,29 @@ textarea {
   padding: 60px 0;
   background: var(--herobgc);
 }
-.footer-container {
+.footer--container {
   display: flex;
   align-items: baseline;
 }
-.footer-content {
+.footer-contacts {
   margin-right: 70px;
 }
 .adress {
   font-style: normal;
 }
 
-.adress-info-link {
+.adress__link {
   transition: color var(--transition-duration) var(--timing-function);
   color: rgba(255, 255, 255, 0.6);
 }
-.adress-link {
+.adress__link--color {
   color: var(--text-color-white);
 }
-.adress-info-link:focus,
-.adress-info-link:hover {
+.adress__link:focus,
+.adress__link:hover {
   color: var(--text-color-logo);
 }
-.adress-info-item:not(:last-child) {
+.adress__item:not(:last-child) {
   margin-bottom: 9px;
 }
 /* icons */
@@ -388,13 +391,13 @@ textarea {
   text-transform: uppercase;
   color: var(--text-color-white);
 }
-.footer-social {
+.footer-social__list {
   display: flex;
 }
-.footer-social-item:not(:last-child) {
+.footer-social__item:not(:last-child) {
   margin-right: 10px;
 }
-.footer-social-link {
+.footer-social__link {
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -405,23 +408,23 @@ textarea {
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color var(--transition-duration) var(--timing-function);
 }
-.footer-social-link:hover,
-.footer-social-link:focus {
+.footer-social__link:hover,
+.footer-social__link:focus {
   background-color: var(--text-color-logo);
 }
-.footer-social-icon {
+.footer-social__icon {
   fill: currentColor;
 }
-.form-container{
+.footer-subscribe {
   margin-left: auto;
 }
-.footer-form {
+.footer-subscribe__form {
   display: flex;
 }
-.footer-label {
+.footer-subscribe__label {
   margin-right: 12px;
 }
-.footer-input {
+.footer-subscribe__input {
   cursor: pointer;
   padding: 15px 16px;
   width: 358px;
@@ -431,13 +434,13 @@ filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 border-radius: 4px;
 background-color: var(--herobgc);
 }
-.footer-input::placeholder {
+.footer-subscribe__input::placeholder {
   font-size: 16px;
 line-height: 1.25;
 color: rgba(255, 255, 255, 0.6);
 
 }
-.footer-form-button {
+.footer-subscribe__button {
   cursor: pointer;
   padding: 10px 28px;
   font-weight: 700;
@@ -452,24 +455,24 @@ border-radius: 4px;
 border-color: transparent;
 color: var(--text-color-white);
 }
-.footer-form-icon {
+.footer-subscribe__icon {
   fill: #ffffff;
   margin-left: 10px;
 }
 /* portfolio */
 
-/* button */
+/* Фильтр */
 .filter {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
 }
 
-.filter-item:not(:last-child) {
+.filter__item:not(:last-child) {
   margin-right: 8px;
 }
-.filter .filter-button:focus,
-.filter .filter-button:hover {
+.filter__button:focus,
+.filter__button:hover {
   color: var(--text-color-white);
   background-color: var(--text-color-logo);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -477,7 +480,7 @@ color: var(--text-color-white);
   border-radius: 4px;
 }
 
-.filter-button {
+.filter__button {
   cursor: pointer;
   padding: 6px 22px;
   font-weight: 500;
@@ -492,40 +495,41 @@ color: var(--text-color-white);
     background-color var(--transition-duration) var(--timing-function),
     box-shadow var(--transition-duration) var(--timing-function);
 }
-.gallery-items {
+/* Галерея */
+.gallery {
   display: flex;
   flex-wrap: wrap;
 }
-.gallery-subtitle {
+.gallery__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--text-color-sec);
 }
-.gallery-text {
+.gallery__text {
   color: var(--text-color-main);
   font-size: 16px;
   line-height: 1.87;
 }
-.gallery-item {
+.gallery__item {
   margin-bottom: 30px;
   margin-right: 30px;
 }
-.gallery-link {
+.gallery__link {
   display: block;
   transition: box-shadow var(--transition-duration) var(--text-color-white);
 }
-.gallery-link:hover,
-.gallery-link:focus {
+.gallery__link:hover,
+.gallery__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.gallery-overlay {
+.gallery__overlay {
   position: relative;
   overflow: hidden;
 }
-.gallery-overlay-text {
+.gallery__overlay-text {
   position: absolute;
   padding: 63px 24px;
   font-size: 18px;
@@ -535,11 +539,11 @@ color: var(--text-color-white);
   background-color: rgba(33, 150, 243, 0.9);
   color: var(--text-color-white);
 }
-.gallery-link:hover .gallery-overlay-text,
-.gallery-link:focus .gallery-overlay-text {
+.gallery__link:hover .gallery__overlay-text,
+.gallery__link:focus .gallery__overlay-text {
   transform: translateY(-100%);
 }
-.gallery-examples {
+.gallery__desc {
   background-color: #ffffff;
   border-bottom-width: 1px;
   border-left-width: 1px;
@@ -549,10 +553,10 @@ color: var(--text-color-white);
   padding: 20px 24px;
 }
 
-.gallery-item:nth-child(3n) {
+.gallery__item:nth-child(3n) {
   margin-right: 0;
 }
-.gallery-item:nth-last-child(-n + 3) {
+.gallery__item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
 /* Модальное окно */
@@ -588,7 +592,7 @@ color: var(--text-color-white);
     opacity var(--transition-duration) var(--timing-function);
   background-color: var(--mainbgc);
 }
-.modal-title {
+.modal__title {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
@@ -596,7 +600,7 @@ color: var(--text-color-white);
   text-align: center;
   color: var(--text-color-sec);
 }
-.modal-button-close {
+.modal__button-close {
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -611,15 +615,15 @@ color: var(--text-color-white);
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: var(--mainbgc);
 }
-.modal-button-close:focus .modal-icon,
-.modal-button-close:hover .modal-icon {
+.modal__button-close:focus .modal__icon-close,
+.modal__button-close:hover .modal__icon-close {
   fill: var(--text-color-logo);
 }
-.modal-icon {
+.modal__icon {
   transition: fill var(--transition-duration); var(--timing-function);
   fill: #000000;
 }
-.form-label {
+.modal__label {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -629,21 +633,19 @@ color: var(--text-color-white);
   margin-bottom: 10px;
     
 }
-.form-comment {
+.modal__label--margin {
   margin-bottom: 20px;
 }
 
-.form-input::placeholder {
+.modal__input::placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
 
   color: rgba(117, 117, 117, 0.5);
 }
-.form-input.comment {
-  padding: 12px 16px;
-}
-.form-input {
+
+.modal__input {
   margin-top: 4px;
   cursor: pointer;
   padding: 11px 42px;
@@ -651,20 +653,23 @@ color: var(--text-color-white);
   border-radius: 4px;
   transition: border-color var(--transition-duration) var(--timing-function);
 }
-.form-input:focus {
+.modal__input-padding {
+  padding: 12px 16px;
+}
+.modal__input:focus {
   border-color: var(--text-color-logo);
 }
-.form-input:focus ~ .form-icon {
+.modal__input:focus ~ .modal__icon {
    fill: var(--text-color-logo);
 }
-.form-icon {
+.modal__icon {
   display: flex;
   position: absolute;
 transition: fill var(--transition-duration) var(--timing-function);
   left: 15px;
   bottom: 14px;
 }
-.form-checkbox {
+.modal__checkbox {
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -672,11 +677,11 @@ transition: fill var(--transition-duration) var(--timing-function);
   margin-bottom: 30px;
 }
 
-.checkbox-input:checked + .checkbox-empty {
+.modal__checkbox-input:checked + .modal__icon-empty {
   background-color: var(--text-color-logo);
   border: transparent;
 }
-.checkbox-empty {
+.modal__icon-empty {
   margin-right: 7px;
   display: flex;
   width: 16px;
@@ -684,14 +689,14 @@ transition: fill var(--transition-duration) var(--timing-function);
   border: 2px solid var(--text-color-sec);
   border-radius: 4px;
 }
-.checkbox-icon {
+.modal__icon-ckeck {
   fill: var(--text-color-white);
 }
-.form-checkbox-link {
+.modal__link {
   text-decoration: underline;
   color: var(--text-color-logo);
 }
-.modal-button {
+.modal__button {
   cursor: pointer;
   display: block;
   margin-right: auto;
