--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -4,10 +4,11 @@
 .clients__item {
   width: 170px;
   height: 92px;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
-.clients__item:not(:last-child) {
-  margin-right: 30px;
-}
+
 .clients__link {
   display: flex;
   justify-content: center;
