--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -6,11 +6,11 @@
   display: flex;
 }
 
-.work-list__item:not(:last-child) {
-  margin-right: 30px;
-}
 .work-list__item {
   position: relative;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 .work-list__tumb {
   display: flex;
