--- a/css/main.css
+++ b/css/main.css
@@ -26,14 +26,6 @@ textarea {
   resize: none;
 }
 
-.visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-}
-
 body {
   font-family: Roboto, sans-serif;
   font-size: 14px;
@@ -67,7 +59,7 @@ body {
   border-bottom-color: #ececec;
 }
 
-.main-nav {
+.container--flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -108,6 +100,10 @@ body {
   color: #212121;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-nav__link:hover, .site-nav__link:focus {
+  color: #2196f3;
 }
 
 .site-nav__link--current {
@@ -232,7 +228,7 @@ body {
   margin-right: 30px;
 }
 
-.features__icons {
+.features__box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -256,6 +252,14 @@ body {
   color: #212121;
 }
 
+.section__title--visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
 .section--padding {
   padding-top: 0;
 }
@@ -266,12 +270,12 @@ body {
   display: flex;
 }
 
-.work-list__item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .work-list__item {
   position: relative;
+}
+
+.work-list__item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .work-list__tumb {
@@ -594,6 +598,14 @@ body {
   margin-left: 10px;
 }
 
+.section-title--visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
 .filter {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -660,6 +672,14 @@ body {
   margin-right: 30px;
 }
 
+.gallery__item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.gallery__item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
 .gallery__link {
   display: block;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -699,7 +719,7 @@ body {
           transform: translateY(-100%);
 }
 
-.gallery__desc {
+.gallery__tumb {
   background-color: #ffffff;
   border-bottom-width: 1px;
   border-left-width: 1px;
@@ -707,14 +727,6 @@ body {
   border-style: solid;
   border-color: #eeeeee;
   padding: 20px 24px;
-}
-
-.gallery__item:nth-child(3n) {
-  margin-right: 0;
-}
-
-.gallery__item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
 }
 
 .backdrop {
@@ -730,6 +742,10 @@ body {
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal {
@@ -888,6 +904,14 @@ body {
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 30px;
+}
+
+.modal__checkbox-input--visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
 
 .modal__checkbox-input:checked + .modal__icon-empty {
