--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -3,11 +3,12 @@
 }
 .features__item {
   width: 270px;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
-.features__item:not(:last-child) {
-  margin-right: 30px;
-}
-.features__icons {
+
+.features__box {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -22,4 +23,11 @@
   line-height: 1.14;
   text-transform: uppercase;
   color: $text-color-sec;
+}
+.section__title--visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
 }
