--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,10 +1,10 @@
 .footer {
   padding: 60px 0;
   background: $herobgc;
-}
-.footer--container {
-  display: flex;
+  &--container {
+     display: flex;
   align-items: baseline;
+  }
 }
 .footer-title {
   margin-bottom: 20px;
