--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -3,7 +3,7 @@
   border-bottom-style: solid;
   border-bottom-color: #ececec;
 }
-.main-nav {
+.container--flex {
   display: flex;
   align-items: center;
 }
