--- a/sass/components/_portfolio-gallery.scss
+++ b/sass/components/_portfolio-gallery.scss
@@ -17,6 +17,13 @@
 .gallery__item {
   margin-bottom: 30px;
   margin-right: 30px;
+
+  &:nth-child(3n) {
+    margin-right: 0;
+  }
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 .gallery__link {
   display: block;
@@ -47,7 +54,7 @@
 .gallery__link:focus .gallery__overlay-text {
   transform: translateY(-100%);
 }
-.gallery__desc {
+.gallery__tumb {
   background-color: #ffffff;
   border-bottom-width: 1px;
   border-left-width: 1px;
@@ -55,11 +62,4 @@
   border-style: solid;
   border-color: #eeeeee;
   padding: 20px 24px;
-}
-
-.gallery__item:nth-child(3n) {
-  margin-right: 0;
-}
-.gallery__item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
 }
