--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -10,9 +10,9 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-.team-cards__item:not(:last-child) {
-  margin-right: 30px;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .team-cards__tumb {
@@ -22,8 +22,10 @@
   display: flex;
   justify-content: center;
 }
-.team-social__item:not(:last-child) {
-  margin-right: 10px;
+.team-social__item {
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
 .team-social__link {
   display: flex;
